syntax = "proto3";

option csharp_namespace = "DataCollectionService";
import "google/protobuf/timestamp.proto";

package collection;

service DataCollection {
	rpc StartService (StartServiceRequest) returns (StartServiceReply);
	rpc StopService (StopServiceRequest) returns (StopServiceReply);
	rpc GetCommentsFrom (GetCommentsRequest) returns (GetCommentsReply);
}
message StartServiceRequest{}
message StartServiceReply{}

message StopServiceRequest{}
message StopServiceReply{}

message GetCommentsRequest{
	int32 StartIndex = 1;
}
message GetCommentsReply{
	repeated CommentDataProto result = 1;
}

message CommentDataProto{
	int64 Id = 1;
	int64 CommentId = 2;
	int64 PostId = 3;
	int64 GroupId = 4;
	int64 AuthorId = 5;
	string Text = 6;
	google.protobuf.Timestamp PostDate = 7;
}
